[package]
edition = "2021"
name = "torrust-hash2torrent"
version = "0.1.0"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-server = "0.6.0"
binascii = "0"
bytes = "1.7.1"
camino = "1.1.9"
futures-util = "0.3.30"
http-body = "1.0.0"
hyper = { version = "1.3.1", features = ["client"] }
hyper-util = { version = "0.1.3", features = ["http1", "http2", "tokio"] }
librqbit = "7.0.1"
pin-project-lite = "0.2.14"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = { version = "0.5.2", features = ["timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
